name:                hqfl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/cokleisli/hqfl#readme
license:             BSD3
license-file:        LICENSE
author:              Mika'il Khan
maintainer:          co.kleisli@gmail.com
copyright:           Copyright: (c) 2016 Mika'il Khan
category:            Finance
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Finance.Hqfl
                     , Finance.Hqfl.Rate
                     , Finance.Hqfl.Rate.Libor
                     , Finance.Hqfl.Currency
                     , Finance.Hqfl.Instrument
                     , Finance.Hqfl.Instrument.Type
                     , Finance.Hqfl.Instrument.Equity
                     , Finance.Hqfl.Instrument.Option
                     , Finance.Hqfl.Instrument.BarrierOption
                     , Finance.Hqfl.Instrument.Bond
                     , Finance.Hqfl.Instrument.Cap
                     , Finance.Hqfl.Instrument.Commodity
                     , Finance.Hqfl.Instrument.Credit
                     , Finance.Hqfl.Instrument.Currency
                     , Finance.Hqfl.Instrument.Energy
                     , Finance.Hqfl.Instrument.Forward
                     , Finance.Hqfl.Instrument.Future
                     , Finance.Hqfl.Instrument.StockIndex
                     , Finance.Hqfl.Instrument.Insurance
                     , Finance.Hqfl.Instrument.Swap
                     , Finance.Hqfl.Instrument.Weather
                     , Finance.Hqfl.Pricer.MonteCarlo
                     , Finance.Hqfl.Pricer.BlackScholes
                     , Finance.Hqfl.Pricer.Black
                     , Finance.Hqfl.Pricer.Asay
  build-depends:       Decimal >= 0.4.2
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , hspec >= 2.2.3
                     , mtl >= 2.2.1
                     , mwc-random >= 0.13.3.2
                     , pipes >= 4.1.8
                     , primitive >= 0.6.1.0
                     , random >= 1.1
                     , random-fu >= 0.2.6.2
                     , statistics >= 0.13.2.3
  default-language:    Haskell2010

executable hqfl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.5.6.2
                     , ghc-mod
                     , hqfl
                     , hspec >= 2.2.3
                     , mtl >= 2.2.1
                     , pipes >= 4.1.8
                     , primitive >= 0.6.1.0
                     , random >= 1.1
  default-language:    Haskell2010

test-suite hqfl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers >= 0.5.6.2
                     , hqfl
                     , hspec >= 2.2.3
                     , mtl >= 2.2.1
                     , pipes >= 4.1.8
                     , random >= 1.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cokleisli/hqfl
